# Algorithmic-Trading-Project

./: AppBase.cpp  AppBase.h  BookUpdate.cpp  BookUpdate.h  CMakeLists.txt  Class Project Trading Startegy.ipynb  MDReader.cpp  MDReader.h  MarketSimulator.cpp  MarketSimulator.h  MyOrderBook.cpp  MyOrderBook.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  PriceUpdate.cpp  PriceUpdate.h  TradeTimings.txt  TradingStrategy.cpp  TradingStrategy.h  main.cpp
ProjectTests/: CMakeLists.txt
ProjectTests/tests/: AppBaseTest.cpp  BookUpdateTests.cpp  CMakeLists.txt  MDReadertests.cpp  MarketSimulatorTest.cpp  MyOrderBookTests.cpp  OrderManagerTests.cpp  OrderTest.cpp  PriceUpdateTest.cpp  TradingSignalsTests.cpp
Reference Model (Python)/: Class Project Trading Startegy.py
